--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -6,3 +6,7 @@ ja:
         username: '名前'
         useremail: 'Eメール'
         body: '本文'
+      reply_form:
+        username: '名前'
+        useremail: 'Eメール'
+        body: '本文'
